Fix: Layout wrap

--- a/src/app/station/station-data/station-data.component.css
+++ b/src/app/station/station-data/station-data.component.css
@@ -1,5 +1,5 @@
 .currentData {
-    font-size: 3vmax;
+    font-size: 4.5vmin;
     margin: 0;
 }
 .currentDataUnit {
